--- a/Kexts/HibernationFixup.kext/Contents/Info.plist
+++ b/Kexts/HibernationFixup.kext/Contents/Info.plist
@@ -7,17 +7,17 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>AirportBrcmFixup</string>
+	<string>HibernationFixup</string>
 	<key>CFBundleIdentifier</key>
-	<string>as.lvs1974.AirportBrcmFixup</string>
+	<string>as.lvs1974.HibernationFixup</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>AirportBrcmFixup</string>
+	<string>HibernationFixup</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.1.0</string>
+	<string>1.3.6</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,7 +25,7 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2.1.0</string>
+	<string>1.3.6</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -42,57 +42,18 @@
 	<string>11E708</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>as.lvs1974.AirportBrcmFixup</key>
+		<key>as.lvs1974.HibernationFixup</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>as.lvs1974.AirportBrcmFixup</string>
+			<string>as.lvs1974.HibernationFixup</string>
 			<key>IOClass</key>
-			<string>AirportBrcmFixup</string>
+			<string>HibernationFixup</string>
 			<key>IOMatchCategory</key>
-			<string>AirportBrcmFixup</string>
+			<string>HibernationFixup</string>
 			<key>IOProviderClass</key>
 			<string>IOResources</string>
 			<key>IOResourceMatch</key>
 			<string>IOKit</string>
-		</dict>
-		<key>as.lvs1974.FakeAirportBrcmFixup</key>
-		<dict>
-			<key>CFBundleIdentifier</key>
-			<string>as.lvs1974.AirportBrcmFixup</string>
-			<key>IOClass</key>
-			<string>FakeBrcm</string>
-			<key>IOMatchCategory</key>
-			<string>IODefaultMatchCategory</string>
-			<key>IONameMatch</key>
-			<array>
-				<string>pci14e4,43ba</string>
-				<string>pci14e4,43a3</string>
-				<string>pci14e4,43a0</string>
-				<string>pci14e4,4331</string>
-				<string>pci14e4,4353</string>
-				<string>pci14e4,43b1</string>
-				<string>pci14e4,43b2</string>
-				<string>pci14e4,4357</string>
-				<string>pci14e4,432b</string>
-				<string>pci14e4,4311</string>
-				<string>pci14e4,4312</string>
-				<string>pci14e4,4313</string>
-				<string>pci14e4,4318</string>
-				<string>pci14e4,4319</string>
-				<string>pci14e4,431a</string>
-				<string>pci14e4,4320</string>
-				<string>pci14e4,4324</string>
-				<string>pci14e4,4325</string>
-				<string>pci14e4,4328</string>
-				<string>pci14e4,432c</string>
-				<string>pci14e4,432d</string>
-			</array>
-			<key>IOProbeScore</key>
-			<integer>6000</integer>
-			<key>IOProviderClass</key>
-			<string>IOPCIDevice</string>
-			<key>TruePowerOff</key>
-			<true/>
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
@@ -104,9 +65,7 @@
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>as.vit9696.Lilu</key>
-		<string>1.2.6</string>
-		<key>com.apple.iokit.IOPCIFamily</key>
-		<string>2.7</string>
+		<string>1.2.4</string>
 		<key>com.apple.kpi.bsd</key>
 		<string>12.0.0</string>
 		<key>com.apple.kpi.dsep</key>
@@ -121,6 +80,6 @@
 		<string>12.0.0</string>
 	</dict>
 	<key>OSBundleRequired</key>
-	<string>Network-Root</string>
+	<string>Root</string>
 </dict>
 </plist>
